--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,22 @@
 language: ruby
-sudo: false
-dist: trusty
+dist: xenial
 cache: bundler
 
-before_script: 
-  - gem update --system
-  - gem install bundler
-
-rvm:
-  - 2.3
-  - 2.4
-  - 2.5
-  - jruby-head
-  - ruby-head
-  - rbx-3
 matrix:
+  include:
+    - rvm: 2.3
+    - rvm: 2.4
+    - rvm: 2.5
+    - rvm: 2.6
+    - rvm: 2.6
+      os: osx
+    - rvm: 2.6
+      env: COVERAGE=BriefSummary,Coveralls
+    - rvm: truffleruby
+    - rvm: jruby-head
+      env: JRUBY_OPTS="--debug -X+O"
+    - rvm: ruby-head
   allow_failures:
+    - rvm: truffleruby
     - rvm: ruby-head
     - rvm: jruby-head
-    - rvm: rbx-3
