--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
         ruby-version: ${{matrix.ruby}}
     - name: Install dependencies
       run: |
-        gem install bundler
+        # gem install bundler
         bundle install
     - name: Run tests
       run: ${{matrix.env}} bundle exec rspec
