--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
       matrix:
         os:
           - ubuntu
-          - macos
+          # - macos
         
         ruby:
           - 2.3
@@ -30,7 +30,7 @@ jobs:
         ruby-version: ${{matrix.ruby}}
     - name: Install dependencies
       run: |
-        # gem install bundler
+        command -v bundler || gem install bundler
         bundle install
     - name: Run tests
       run: ${{matrix.env}} bundle exec rspec
