--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
       matrix:
         os:
           - ubuntu
-          # - macos
+          - macos
         
         ruby:
           - 2.3
