--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ matrix:
     - rvm: 2.4
     - rvm: 2.5
     - rvm: 2.6
-    - rvm: 2.6
-      os: osx
+    # - rvm: 2.6
+    #   os: osx
     - rvm: 2.6
       env: COVERAGE=BriefSummary,Coveralls
     - rvm: truffleruby
