--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -11,7 +11,6 @@ jobs:
           - macos
         
         ruby:
-          - 2.4
           - 2.5
           - 2.6
           - 2.7
@@ -25,7 +24,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - uses: actions/setup-ruby@v1
+    - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{matrix.ruby}}
     - name: Install dependencies
