--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -14,6 +14,7 @@ jobs:
           - 2.5
           - 2.6
           - 2.7
+          - truffleruby
         
         include:
           - os: 'ubuntu'
