--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,12 @@
-*.gem
-*.rbc
-.bundle
-.config
-.yardoc
-/gems.locked
-InstalledFiles
-_yardoc
-coverage
-doc/
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-.tags*
-documentation/run/*
-documentation/public/code/*
+/.bundle/
+/.yardoc
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+
+# rspec failure tracking
 .rspec_status
+gems.locked
