Test against `truffleruby-head`.

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -23,7 +23,7 @@ jobs:
         
         include:
           - os: ubuntu
-            ruby: truffleruby
+            ruby: truffleruby-head
             experimental: true
           - os: ubuntu
             ruby: jruby
