--- a/.github/workflows/async-head.yaml
+++ b/.github/workflows/async-head.yaml
@@ -1,4 +1,4 @@
-name: Async v1
+name: Async head
 
 on: [push, pull_request]
 
@@ -12,10 +12,10 @@ jobs:
           - ubuntu
         
         ruby:
-          - 2.7
+          - head
     
     env:
-      BUNDLE_GEMFILE: gems/async-v1.rb
+      BUNDLE_GEMFILE: gems/async-head.rb
     
     steps:
     - uses: actions/checkout@v2
@@ -26,4 +26,4 @@ jobs:
     
     - name: Run tests
       timeout-minutes: 5
-      run: bundle exec rspec
+      run: bundle exec sus
