Add `async-service` to external tests.

--- a/config/external.yaml
+++ b/config/external.yaml
@@ -1,3 +1,6 @@
 falcon:
   url: https://github.com/socketry/falcon.git
   command: bundle exec bake test
+async-service:
+  url: https://github.com/socketry/async-service.git
+  command: bundle exec bake test
